# mlhandbook

./: .buildinfo  .gitignore  ACKNOWLEDGMENTS.html  LICENSE  README.md  _config.yml  _toc.yml  environment.yml  genindex.html  index.html  index.ipynb  index.md  intro.html  objects.inv  postgen_script.py  pyproject.toml  requirements.txt  search.html  searchindex.js
_sources/: ACKNOWLEDGMENTS.md  index.md  intro.md
algorithms/: artificial_neural_networks.html  artificial_neural_networks.ipynb  autoencoders.html  autoencoders.ipynb  bayesian_methods.html  bayesian_methods.ipynb  classic_ml.html  convolutional_neural_networks.html  convolutional_neural_networks.ipynb  decision_trees_and_random_forests.html  decision_trees_and_random_forests.ipynb  generative_adversarial_networks.html  generative_adversarial_networks.ipynb  generative_deep_learning.html  k_means.html  k_nearest_neighbors.html  k_nearest_neighbors.ipynb  knn.ipynb  linear_regression.html  linear_regression.ipynb  logistic_regression.html  logistic_regression.ipynb  neural_style_transfer.html  neural_style_transfer.ipynb  nn_deep_learning.html  nn_deep_learning.md  recurrent_neural_networks.html  recurrent_neural_networks.ipynb  support_vector_machines.html  support_vector_machines.ipynb  transformers.html
appendix/: acknowledgments.html  acknowledgments.md  glossary.html  glossary.md
deep-learning/: Convolutional_Neural_Networks.ipynb  Dense_Neural_Networks.ipynb  MLP.ipynb  Multilayer_Perceptrons.ipynb  Neural_Networks_Tuning.ipynb  Tuning_Neural_Networks.ipynb
engineering/: introduction_to_mlops.html  introduction_to_mlops.ipynb  machine_learning_issues.html  machine_learning_issues.ipynb
fundamentals/: activation_functions.html  activation_functions.ipynb  anatomy_of_a_ml_system.ipynb  assessing_results.html  assessing_results.ipynb  gradient_descent.html  gradient_descent.ipynb  handling_data.html  (+15 more)
(+156 files in other folders)
