[tool.poetry]
name = "mlhandbook"
version = "0.1.0"
description = "Theorical explanations and Python-based demonstrations for various Machine Learning concepts, techniques and tools"
authors = ["Baptiste Pesquet <bpesquet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "~1.23.5"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
tensorflow-macos = "^2.12.0"
tensorflow-metal = "^0.8.0"
torch = "^2.0.1"

[tool.poetry.group.dev.dependencies]
jupyter-book = "^0.15.1"
notebook = "^6.5.4"
rise = "^5.7.1"
jupyter-contrib-nbextensions = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
